# SMESH

./: .gitmodules  CMakeLists.txt  README.md
package/fedora/: smesh-9.7.0.1.spec~  smesh-bleed.spec  smesh-bleed.spec~
